fixed form and added more spacing on homepage
added in space-medium and space-small, and form.css for the pages with form.

--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -74,5 +74,10 @@
   .banner-btn {
     font-size: 0.8rem;
   }
+
+  .min-width-image {
+    visibility: hidden;
+  }
+  
 }
 
