--- a/src/components/Causes/Causes-Banner/causes-banner-css.css
+++ b/src/components/Causes/Causes-Banner/causes-banner-css.css
@@ -28,7 +28,7 @@
 }
 
 .cause-banner-title h4 {
-    margin-top: 2rem;
+    margin-top: 0rem;
     margin-bottom: 0.5rem;
     margin-left: 0px;
     margin-right: 0px;
