--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -7,6 +7,7 @@
 .project-card {
     height: 350px;
     width: 230px;
+    margin-top: 10px;
     margin-right: 10px;
     border-radius: 10px;
     border: 1px solid #efefef;
@@ -23,7 +24,7 @@
     width: 230px;
     height: 150px;
     object-fit: cover;
-    border-radius: 6px;
+    border-radius: 6px 6px 0px 0px;
 }
 
 .project-text {
