--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -40,12 +40,13 @@
 
 .tagline h2 {
    margin: 0px;
+   margin-top: 0px;
    margin-bottom: 2rem;
 
 }
 
 .tagline h4 {
-    margin-top: 2rem;
+    margin-top: 0rem;
     margin-bottom: 0.5rem;
     margin-left: 0px;
     margin-right: 0px;
@@ -113,4 +114,5 @@
 
 .step-instructions h6 {
     margin-top: 0.5rem;
+    margin-bottom: 0px;
 }
